@@ -35,8 +35,6 @@ import androidx.annotation.VisibleForTesting;
 
 import com.android.settingslib.inputmethod.InputMethodAndSubtypeUtil;
 
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -49,13 +47,11 @@ public final class InputMethodUtil {
     /**
      * A list of past and present Google Voice Typing package names
      */
-    public static final List<String> GVT_PACKAGE_NAMES =
-            Collections.unmodifiableList(
-                    new ArrayList<String>(){{
-                        add("com.google.android.tts");
-                        add("com.google.android.carassistant");
-                        add("com.google.android.googlequicksearchbox");
-                    }});
+    public static final List<String> GVT_PACKAGE_NAMES = List.of(
+            "com.google.android.tts",
+            "com.google.android.carassistant",
+            "com.google.android.googlequicksearchbox"
+    );
     /**
      * Splitter for Enabled Input Methods' concatenated string.
      */
